# Othello-bot

./: .gitignore  CMakeLists.txt  README.md  materiallista.md  projektplan.md
Documentation/: materials_SE.md  project_plan_SE.md
Documentation/project_report/: project_report.tex
othello_bot/: AI.cpp  AI.h  AI.hpp  IO.c  IO.cpp  IO.h  IO.hpp  config.hpp  game.cpp  game.h  game.hpp  move_planner.cpp  move_planner.h  move_planner.hpp  othello_bot.ino  random.hpp  sensor.cpp  sensor.h  sensor.hpp
source/: game.h  main.ino  move_planner.h
tests/: benchmark_main.cpp  play_main.cpp  test_AI.cpp  test_game.cpp  test_main.cpp
